--- a/style.css
+++ b/style.css
@@ -618,4 +618,17 @@ footer {
     bottom: 10px;
     right: 10px;
   }
+  .clique-confira {
+  display: block;
+  color: #FF0000;
+  font-weight: bold;
+  font-size: 14px;
+  text-decoration: none;
+  margin: 5px 0;
+  transition: color 0.3s ease;
+}
+
+.clique-confira:hover {
+  color: #CC0000;
+}
 }
